feat: implemented logic change task
